# MNIST_CNN

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  docker_build.yml  tests.yml
MNIST_CNN/: __init__.py  predict_model.py  train_model.py
MNIST_CNN/data/: __init__.py  make_dataset.py
MNIST_CNN/models/: model.py
data/processed/corruptmnist/: test_target.pt  train_target.pt
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: test_data.py  test_predict.py
